# RB1-AudioRecognition

./: README.md
AudioRecognition/: Audio-recognition.cpp  CMakeLists.txt
AudioRecognition/cfg/: yamnet_class_map.csv
doc/: .~1-AudioRecognition-demo-doc.docx  RB1-AudioRecognition-demo-doc.docx  Video_description.txt
